--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -365,11 +365,11 @@
             </p>
 
             <div class="cta-wrapper mt-4">
-              <a href="about.html" class="primary-cta">
+              <a href="#" class="primary-cta">
                 <span>تعرف على المزيد عنا</span>
                 <i class="bi bi-arrow-left"></i>
               </a>
-              <a href="services.html" class="secondary-cta">
+              <a href="#" class="secondary-cta">
                 <span>اكتشف خدماتنا</span>
                 <i class="bi bi-arrow-left"></i>
               </a>
@@ -439,11 +439,11 @@
 
         <div class="col-lg-4 text-center text-lg-start">
           <div class="contact-actions" data-aos="fade-up" data-aos-delay="300">
-            <a href="tel:+966555555555" class="emergency-call">
+            <a href="tel:+201127078236" class="emergency-call">
               <i class="bi bi-telephone"></i>
-              <span>+966 55 555 5555</span>
+              <span>+201127078236</span>
             </a>
-            <a href="contact.html" class="contact-link">تواصل معنا</a>
+            <a href="#" class="contact-link">تواصل معنا</a>
           </div>
         </div>
 
