--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -23,11 +23,11 @@
               </div>
               <div class="contact-item">
                 <i class="bi bi-telephone"></i>
-                <span>{% trans "+1 (555) 987-6543" %}</span>
+                <span>{% trans "+201127078236" %}</span>
               </div>
               <div class="contact-item">
                 <i class="bi bi-envelope"></i>
-                <span>{% trans "hello@designstudio.com" %}</span>
+                <span>{% trans "info@total-surveying.com" %}</span>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
           <div class="col-lg-6">
             <div class="copyright">
               <p>
-                © <span class="sitename">{% trans "منظمة TSO" %}</span>.
+                © <span class="sitename">{% trans "TSO" %}</span>.
                 {% trans "جميع الحقوق محفوظة." %}
               </p>
             </div>
