--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -6,10 +6,10 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center">
-          <a href="mailto:contact@example.com">{% trans "contact@example.com" %}</a>
+          <a href="mailto:info@total-surveying.com">{% trans "info@total-surveying.com" %}</a>
         </i>
         <i class="bi bi-phone d-flex align-items-center ms-4">
-          <span>{% trans "+1 5589 55488 55" %}</span>
+          <span>{% trans "201127078236" %}</span>
         </i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
