--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -14,9 +14,9 @@
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
-  --default-font: "Cairo", sans-serif;
-  --heading-font: "Cairo", sans-serif;
-  --nav-font: "Cairo", sans-serif;
+  --default-font: "Tajawal", sans-serif;
+  --heading-font: "Tajawal", sans-serif;
+  --nav-font: "Tajawal", sans-serif;
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
@@ -65,7 +65,8 @@
 body {
   color: var(--default-color);
   background-color: var(--background-color);
-  font-family: "Cairo", sans-serif;
+  font-family: "Tajawal", sans-serif;
+  font-style: normal;
 }
 
 a {
@@ -86,7 +87,7 @@ h4,
 h5,
 h6 {
   color: var(--heading-color);
-  font-family: "Cairo", sans-serif;
+  font-family: "Tajawal", sans-serif;
 }
 
 /* PHP Email Form Messages
@@ -269,7 +270,7 @@ h6 {
     color: var(--nav-color);
     font-size: 15px;
     padding: 0 2px;
-    font-family: "Cairo", sans-serif;
+    font-family: "Tajawal", sans-serif;
     font-weight: 500;
     display: flex;
     align-items: center;
@@ -406,7 +407,7 @@ h6 {
   .navmenu a:focus {
     color: var(--nav-dropdown-color);
     padding: 10px 20px;
-    font-family: "Cairo", sans-serif;
+    font-family: "Tajawal", sans-serif;
     font-size: 17px;
     font-weight: 500;
     display: flex;
@@ -516,7 +517,7 @@ h6 {
 }
 
 .footer-16 .brand-section .logo .sitename {
-  font-family:"Cairo", sans-serif;
+  font-family:"Tajawal", sans-serif;
   font-size: 32px;
   font-weight: 300;
   color: var(--heading-color);
@@ -568,7 +569,7 @@ h6 {
 }
 
 .footer-16 .nav-column h6 {
-  font-family: "Cairo", sans-serif;
+  font-family: "Tajawal", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: var(--heading-color);
@@ -603,7 +604,7 @@ h6 {
 }
 
 .footer-16 .footer-social .newsletter-section h5 {
-  font-family: "Cairo", sans-serif;
+  font-family: "Tajawal", sans-serif;
   font-size: 20px;
   font-weight: 300;
   color: var(--heading-color);
@@ -3512,7 +3513,7 @@ section,
   font-weight: 300;
   margin-bottom: 15px;
   color: var(--heading-color);
-  font-family: "Cairo", sans-serif;
+  font-family: "Tajawal", sans-serif;
   line-height: 1.3;
 }
 
@@ -3537,7 +3538,7 @@ section,
 }
 
 .departments .department-content .learn-more span {
-  font-family: "Cairo", sans-serif;
+  font-family: "Tajawal", sans-serif;
 }
 
 .departments .department-content .learn-more i {
@@ -5205,7 +5206,7 @@ section,
 .faq .faq-item .faq-header .faq-number {
   flex-shrink: 0;
   width: 80px;
-  font-family: "Cairo", sans-serif;
+  font-family: "Tajawal", sans-serif;
   font-size: 1.1rem;
   font-weight: 300;
   color: color-mix(in srgb, var(--default-color), transparent 50%);
@@ -5216,7 +5217,7 @@ section,
 .faq .faq-item .faq-header h4 {
   flex: 1;
   margin: 0;
-  font-family: "Cairo", sans-serif;
+  font-family: "Tajawal", sans-serif;
   font-size: 1.25rem;
   font-weight: 300;
   color: var(--heading-color);
@@ -6040,7 +6041,7 @@ section,
   color: color-mix(in srgb, var(--heading-color), transparent 15%);
   line-height: 0.8;
   margin-bottom: 40px;
-  font-family: "Cairo", sans-serif;
+  font-family: "Tajawal", sans-serif;
   letter-spacing: -0.02em;
 }
 
