--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
   
   <style>
     body {
-      font-family: "Cairo", sans-serif !important;
+      font-family: "Tajawal", sans-serif !important;
       direction: rtl;
       text-align: right;
     }
