--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static i18n %}
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="{{ LANGUAGE_CODE }}" dir="{% if LANGUAGE_CODE == 'ar' %}rtl{% else %}ltr{% endif %}">
 
 <head>
   <meta charset="utf-8">
@@ -14,11 +14,16 @@
   <link href="{% static 'assets/img/tso-logo.png' %}" rel="apple-touch-icon">
 
   <!-- Arabic Font -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
-<!-- Bootstrap RTL -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap (RTL/LTR switch) -->
+  {% if LANGUAGE_CODE == "ar" %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+  {% else %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  {% endif %}
 
   <!-- Vendor CSS Files -->
   <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
@@ -28,30 +33,37 @@
   <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="{% static 'assets/css/main.css' %}" rel="stylesheet">
+   {% if LANGUAGE_CODE == 'ar' %}
+     <link href="{% static 'assets/css/main_ar.css' %}" rel="stylesheet">
+   {% else %}
+        <link href="{% static 'assets/css/main_en.css' %}" rel="stylesheet">
+   {% endif %}
   
   <style>
     body {
       font-family: "Tajawal", sans-serif !important;
-      direction: rtl;
-      text-align: right;
+      direction: {% if LANGUAGE_CODE == 'ar' %}rtl{% else %}ltr{% endif %};
+      text-align: {% if LANGUAGE_CODE == 'ar' %}right{% else %}left{% endif %};
     }
   </style>
 
   {% block css %}{% endblock %}
 </head>
-<body class="index-page">
-    {% include 'partials/_navbar.html' %}
-  {% block content %}
-  {% endblock %}
-      {% include 'partials/_footer.html' %}
 
-   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+<body class="index-page">
+  {% include 'partials/_navbar.html' %}
+  {% block content %}{% endblock %}
+  {% include 'partials/_footer.html' %}
+
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
+    <i class="bi bi-arrow-up-short"></i>
+  </a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
-      <!-- Vendor JS Files -->
+
+  <!-- Vendor JS Files -->
   <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
   <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
@@ -61,7 +73,7 @@
 
   <!-- Main JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
-  
-  {% block extra_js %}
-  {% endblock %}
+
+  {% block extra_js %}{% endblock %}
 </body>
+</html>
