--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,6 +1,6 @@
 {% load static i18n %}
 
-<footer id="footer" class="footer-16 footer position-relative" dir="rtl">
+<footer id="footer" class="footer-16 footer position-relative" dir="{% if LANGUAGE_CODE == 'ar' %}rtl{% else %}ltr{% endif %}">
 
   <div class="container">
 
@@ -9,7 +9,7 @@
 
         <div class="col-lg-5">
           <div class="brand-section text-end">
-            <a href="{% url 'home' %}" class="logo d-flex align-items-center justify-content-end mb-4">
+            <a href="{% url 'home' %}" class="logo d-flex align-items-center justify-content-center mb-4">
               <img src="{% static 'assets/img/tso-logo.png' %}" alt="{% trans 'شعار TSO' %}" style="max-height: 60px;">
             </a>
             <p class="brand-description">
